--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 absl-py==1.0.0
 addict==2.4.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
 basicsr==1.3.4.7
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1704278392174/work
 cycler==0.11.0
-dataclasses
+dataclasses==0.6
+debugpy @ file:///D:/bld/debugpy_1707444572519/work
 decorator==4.4.2
 distro==1.6.0
 dlib==19.22.1
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
 future==0.18.2
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
@@ -16,45 +22,64 @@ grpcio==1.42.0
 idna==3.3
 imageio==2.11.0
 importlib-metadata==4.8.2
+ipykernel @ file:///D:/bld/ipykernel_1707326433944/work
+ipython @ file:///D:/bld/ipython_1683289169355/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1699283905679/work
+jupyter_core @ file:///D:/bld/jupyter_core_1704727211067/work
 kiwisolver==1.3.1
 libsvm==3.23.0.4
 lmdb==1.2.1
 lpips==0.1.4
 Markdown==3.3.6
 matplotlib==3.3.4
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
 networkx==2.5.1
 numpy==1.19.5
 oauthlib==3.1.1
 opencv-python==4.2.0.34
 packaging==21.3
 pandas==1.1.5
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
 Pillow==8.4.0
-# pkg-resources==0.0.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1706713388748/work
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
 protobuf==3.19.1
+psutil @ file:///D:/bld/psutil_1705722577218/work
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybrisque==1.0
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
 pyparsing==3.0.6
-python-dateutil==2.8.2
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
 pytz==2021.3
 PyWavelets==1.1.1
+pywin32==306
 PyYAML==6.0
+pyzmq @ file:///D:/bld/pyzmq_1701783353652/work
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
 scikit-build==0.12.0
 scikit-image==0.17.2
 scipy==1.5.4
-six==1.16.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 tb-nightly==2.8.0a20211117
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 tifffile==2020.9.3
 torch==1.10.0
 torchvision==0.11.1
+tornado @ file:///D:/bld/tornado_1695373600220/work
 tqdm==4.62.3
-typing-extensions==4.0.0
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1704212992681/work
+typing_extensions==4.0.0
 urllib3==1.26.7
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
 Werkzeug==2.0.2
 yapf==0.31.0
-zipp==3.6.0
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
